--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -188,7 +188,7 @@
   transition: padding 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
 
   &.scrolled {
-    padding: 20px 0;
+    padding: 20px 16px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     background: rgba(0, 0, 0, 0.4);
 
