--- a/scss/widgets/_hero.scss
+++ b/scss/widgets/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
   display: flex;
-  padding: 160px 0rem;
+  padding: 160px 0rem 116px;
   align-items: center;
   gap: 0.625rem;
   align-self: stretch;
@@ -11,7 +11,7 @@
 
   @include desktop-small {
     padding: 5rem 0rem;
-    margin-top: 87px;
+    margin-top: 73px;
   }
 
 
@@ -27,7 +27,7 @@
     color: var(--hero-title);
 
     span {
-      color: var(--hero-highlight) !important;
+      color: #F4E757 !important;
     }
   }
 
@@ -54,6 +54,7 @@
     display: flex;
     @include padding(padding-lg);
     justify-content: center;
+    align-items: center;
     gap: 4.5rem;
     //background: var(--hero-bg);
 
@@ -68,7 +69,7 @@
       @include padding(padding-sm);
     }
 
-    ::before{
+    ::before {
       position: fixed;
       content: "";
       box-shadow: 0 0 100px 40px #ffffff08;
@@ -78,20 +79,22 @@
       height: 60rem;
       transition: .7s all;
     }
-    &:hover{
+
+    &:hover {
       filter: brightness(1.3);
-      ::before{
+
+      ::before {
         filter: brightness(.5);
         top: -100%;
         left: 200%;
       }
     }
 
-    .hero_text_center{
+    .hero_text_center {
       align-items: center;
     }
 
-    .hero_text_left{
+    .hero_text_left {
       align-items: flex-start;
       flex: 1 0 31% !important;
     }
@@ -115,6 +118,7 @@
         // max-width: 100%;
         text-align: left;
         align-items: center;
+
         // padding: 2rem 1rem;
         .button {
           // margin: 0 auto;
@@ -134,7 +138,7 @@
       }
 
       .hero-title {
-        @include typography(display-xl,bold);
+        @include typography(display-xl, bold);
         // text-transform: uppercase;
         // font-family: var(--default-font-2);
         // @include mobile {
@@ -146,7 +150,7 @@
         color: var(--hero-title);
       }
 
-      .button{
+      .button {
         align-self: flex-start;
         display: flex;
         align-items: center;
@@ -156,7 +160,7 @@
         box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
         border: 1px solid var(--color-white);
         padding: 16px 28px;
-        @include typography(text-lg,semibold);
+        @include typography(text-lg, semibold);
 
         @include desktop-small {
           @include typography(text-lg, semibold);
@@ -170,12 +174,14 @@
           -webkit-background-clip: text;
           -webkit-text-fill-color: rgba(0, 0, 0, 0);
         }
+
         svg {
           path {
             stroke: var(--color-button);
           }
         }
       }
+
       gap: 2rem;
       flex: 1 0 60%;
     }
@@ -191,6 +197,7 @@
         // order: 1;
         max-width: 500px;
       }
+
       margin: 0 auto;
 
       img {
