--- a/scss/widgets/_mobile-menu.scss
+++ b/scss/widgets/_mobile-menu.scss
@@ -12,6 +12,23 @@
     width: 40px;
   }
 
+  .cheeseburger-menu__close {
+      display: flex;
+      width: 100%;
+      justify-content: flex-end;
+      height: 21px;
+      align-items: center;
+
+      span {
+        background-image: url(../../images/close.svg);
+        background-repeat: no-repeat;
+        background-position: right;
+        // background-size: 24px;
+        height: 21px;
+        width: 40px;
+      }
+    }
+
   .cheeseburger-menu {
     display: block;
     position: fixed;
@@ -24,7 +41,7 @@
     gap: 1rem;
     // border-radius: 0rem 0rem 0.625rem 0rem;
     background: var(--mobile-menu-bg-container);
-    top: $header-gap;
+    top: 73px;
     border: 1px solid var(--mobile-menu-bg-container);
     transform: translateX(-100%);
     transition: ease-in 0.2s;
@@ -35,21 +52,21 @@
       transform: translateX(0);
     }
 
-    .cheeseburger-menu__close {
-      display: flex;
-      width: 100%;
-      justify-content: flex-end;
-      height: 40px;
-      align-items: center;
+    // .cheeseburger-menu__close {
+    //   display: flex;
+    //   width: 100%;
+    //   justify-content: flex-end;
+    //   height: 40px;
+    //   align-items: center;
 
-      span {
-        background-image: url(../../images/close.svg);
-        background-repeat: no-repeat;
-        background-size: 38px;
-        height: 40px;
-        width: 40px;
-      }
-    }
+    //   span {
+    //     background-image: url(../../images/close.svg);
+    //     background-repeat: no-repeat;
+    //     background-size: 38px;
+    //     height: 40px;
+    //     width: 40px;
+    //   }
+    // }
 
     .cheeseburger-menu__menu {
       display: flex;
