--- a/scss/widgets/_text-right.scss
+++ b/scss/widgets/_text-right.scss
@@ -1,13 +1,14 @@
-
 .page-about {
+
   .text-right,
   .text-right .text-right-container {
     background: var(--text-text);
   }
 
   .text-right .text-right-container .text-right-text .block-title,
-  .text-right .text-right-container .text-right-text p{
+  .text-right .text-right-container .text-right-text p {
     color: var(--text-bg);
+
     @include desktop-small {
       @include typography(text-lg, regular);
     }
@@ -18,6 +19,7 @@
   align-self: stretch;
   padding: 5rem 0;
   background: var(--text-bg);
+
   @include desktop-small {
     padding: 4rem 0;
   }
@@ -46,12 +48,38 @@
       }
     }
 
+    .video-container {
+      // max-width: 1136px;
+      flex: 1;
+      width: 100%;
+      position: relative;
+      height: 592px;
+
+      @include desktop-small {
+        flex: unset;
+      }
+
+      @media (max-width: 500px) {
+        height: 343px;
+      }
+
+      video {
+        width: 100%;
+        display: block;
+        border-radius: 32px;
+        background: #000;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+
     .text-right-text {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: start;
-      gap: 0.625rem;
+      gap: 18px;
       flex: 1;
 
       @include desktop-small {
@@ -61,10 +89,11 @@
 
       .sub-title {
         position: relative;
+
         h4 {
           margin-left: 38px;
           @include typography(display-xs, bold);
-          background: var(--text-text);
+          background: #F4E757;
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;
 
@@ -75,7 +104,7 @@
             width: 20px;
             left: 0;
             top: 40%;
-            background: var(--text-text);
+            background: #F4E757;
             border-radius: 50px;
           }
         }
@@ -90,9 +119,11 @@
         // max-width: 590px;
         color: var(--text-text);
         @include typography(display-lg, bold);
+
         @include desktop-small {
           @include typography(display-md, bold);
         }
+
         h3 {
           // font-family: var(--default-font-2) !important;
           // text-transform: uppercase;
@@ -101,13 +132,19 @@
 
       ul {
         margin-left: 2rem;
+        margin-top: 1.5rem;
+        @include desktop-small {
+          margin-top: 14px;
+        }
       }
 
-      p, li {
+      p,
+      li {
         @include typography(text-xl, regular);
         color: var(--text-text);
         // max-width: 590px;
       }
+
       .button {
         align-self: flex-start;
         display: flex;
