about: why choose us section design done

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -21,6 +21,7 @@
 @import 'widgets/contact-blocks';
 @import 'widgets/contact-form';
 @import 'widgets/cookie-modal';
+@import 'widgets/about-about-company-top';
 
 @import 'pages/login';
 @import 'pages/orders';
