--- a/scss/widgets/_pricing.scss
+++ b/scss/widgets/_pricing.scss
@@ -243,7 +243,7 @@
         .pricing-btn {
           width: 100%;
           padding: 20px 40px;
-          // border-radius: .5rem;
+          border-radius: 12px;
           text-align: center;
           background: var(--bg-pricing-button);
           color: var(--color-pricing-button);
