--- a/templates/partials/custom.css.twig
+++ b/templates/partials/custom.css.twig
@@ -15,14 +15,14 @@
         &:first-child {
             &::before {
                 content: "{{ 'VARIABLE.EMAIL'|t }}";
-                {# color: #fff; #}
+                color: #fff;
             }
         }
 
         &:nth-child(2) {
             &::before {
                 content: "{{ 'VARIABLE.PASSWORD'|t }}";
-                {# color: #fff; #}
+                color: #fff;
             }
         }
     }
